更新上去三个图

--- a/index.html
+++ b/index.html
@@ -109,29 +109,29 @@
                 <h1>Top News</h1>
                 <div class="cont">
                   <div class="item">
-                    <div class="date">
+                    <div class="date verticalCenter">
                       <span class="day">13</span>
                       <span class="mon">MAR</span>
                     </div>
-                    <div class="text">
+                    <div class="text verticalCenter">
                       Lorem ispum. Proin ateti eros non eros adipiscing mollis.
                     </div>
                   </div>
                   <div class="item">
-                    <div class="date">
+                    <div class="date verticalCenter">
                       <span class="day">09</span>
                       <span class="mon">MAR</span>
                     </div>
-                    <div class="text">
+                    <div class="text verticalCenter">
                       Donec semper turpis sed diam. Integer eget sem. Ut vitae enim eu...
                     </div>
                   </div>
                   <div class="item">
-                    <div class="date">
+                    <div class="date verticalCenter">
                       <span class="day">08</span>
                       <span class="mon">MAR</span>
                     </div>
-                    <div class="text">
+                    <div class="text verticalCenter">
                       Lorem ispum. Proin ateti eros non eros adipiscing mollis.
                     </div>
                   </div>
@@ -235,9 +235,7 @@
                   <img src="img/stockimg.png" alt="" />
                 </div>
               </div>
-              <div class="noContainer" id="chooseContainerBtn" data-alert="widgetcenter">
-                
-              </div>
+              <div class="noContainer" id="chooseContainerBtn" data-alert="widgetcenter"></div>
             </div>
             <div class="clear"></div>
           </div>
