更新了字体库

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title></title>
     <link href="" rel="icon">
+    <link rel="stylesheet" href="./font-awesome-4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/public.css">
     <link rel="stylesheet" href="./css/media768.css">
@@ -53,10 +54,13 @@
       
       <ul class="menu">
         <li>
-          <a>Operations</a>  
+          <a>
+            <i class="fa fa-camera-retro"></i>
+            <span>Operations</spam>
+          </a>  
         </li>
         <li>
-          <a>Finance</a>  
+          <a><i class="fa fa-money"></i>Finance</a>  
           <ul class="submenu">
               <li>Subnav1</li>
               <li>Subnav2</li>
@@ -64,10 +68,10 @@
           </ul>
         </li>
         <li>
-          <a>Development</a>  
+          <a><i class="fa fa-camera-retro"></i>Development</a>  
         </li>
         <li>
-          <a>IT</a> 
+          <a><i class="fa fa-camera-retro"></i>IT</a> 
           <ul class="submenu">
               <li>Subnav1</li>
               <li>Subnav2</li>
@@ -75,13 +79,13 @@
           </ul> 
         </li>
         <li>
-          <a>User management</a>  
+          <a><i class="fa fa-camera-retro"></i>User management</a>  
         </li>
         <li>
-          <a>Franchising</a>  
+          <a><i class="fa fa-camera-retro"></i>Franchising</a>  
         </li>
         <li>
-          <a>Report</a>  
+          <a><i class="fa fa-camera-retro"></i>Report</a>  
           <ul class="submenu">
               <li>Subnav1</li>
               <li>Subnav2</li>
@@ -89,7 +93,7 @@
           </ul>
         </li>
         <li>
-          <a>Help</a>  
+          <a><i class="fa fa-camera-retro"></i>Help</a>  
         </li>
       </ul>
     </div>
