--- a/index.html
+++ b/index.html
@@ -42,7 +42,18 @@
       </div>
       <div class="topright">
         <div class="changetheme">
-          <i class="fa fa-sliders fa-rotate-90"></i>
+          <i class="fa fa-sliders fa-rotate-90" data-role="switch"></i>
+          <div class="alertpanel">
+              <div class="title">Choose Theme Color</div>
+              <div class="itembox">
+                  <div class="item"></div>
+                  <div class="item"></div>
+                  <div class="item"></div>
+                  <div class="item">
+                    <img src="./img/zhong.png" />
+                  </div>
+              </div>
+          </div>
         </div>
         <div class="username" id="username">
           <span class="hasmessage" data-role="switch">Paul Smith<i class="fa fa-caret-down"></i></span>
@@ -62,7 +73,13 @@
           </a>  
         </li>
         <li>
-          <a><i class="fa fa-fw fa-credit-card"></i><span>Finance</span></a>  
+          <a><i class="fa fa-fw fa-credit-card"></i>
+            <span>Finance</span>
+            <div>
+              <i class="fa fa-fw fa-angle-right"></i>
+              <i class="fa fa-fw fa-angle-down"></i>
+            </div>
+          </a>  
           <ul class="submenu">
               <li>Subnav1</li>
               <li>Subnav2</li>
@@ -73,7 +90,14 @@
           <a><i class="fa fa-fw fa-globe"></i><span>Development</span></a>  
         </li>
         <li>
-          <a><i class="fa fa-fw fa-laptop"></i><span>IT</span></a> 
+          <a>
+            <i class="fa fa-fw fa-laptop"></i>
+            <span>IT</span>
+            <div>
+              <i class="fa fa-fw fa-angle-right"></i>
+              <i class="fa fa-fw fa-angle-down"></i>
+            </div>
+          </a> 
           <ul class="submenu">
               <li>Subnav1</li>
               <li>Subnav2</li>
@@ -87,7 +111,14 @@
           <a><i class="fa fa-fw fa-leaf"></i><span>Franchising</span></a>  
         </li>
         <li>
-          <a><i class="fa fa-fw fa-line-chart"></i><span>Report</span></a>  
+          <a>
+            <i class="fa fa-fw fa-line-chart"></i>
+            <span>Report</span>
+            <div>
+              <i class="fa fa-fw fa-angle-right"></i>
+              <i class="fa fa-fw fa-angle-down"></i>
+            </div>
+          </a>  
           <ul class="submenu">
               <li>Subnav1</li>
               <li>Subnav2</li>
