增加了鼠标拖动改变顺序功能

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/public.css">
     <link rel="stylesheet" href="./css/media768.css">
     <script src="./js/jquery-1.7.2.min.js"></script>
+
   </head>
   <body>
     <div class="topbar">
@@ -20,7 +21,13 @@
       </div>
       <i class="fa fa-reorder menutoggle" id="menutoggle"></i>
       <div class="myfavorite" id="myfavorite">
-        <span data-role="switch">My Favorite <i class="fa fa-caret-down"></i></span>
+
+        <span data-role="switch">
+          <i class="fa fa-heart-o"></i>
+          <span>My Favorite 
+              <i class="fa fa-caret-down"></i>
+          </span>
+        </span>
         <div class="alertpanel">
             <div class="linkitem"><a href="#" target="_blank">Slick Mega Navigation</a></div>
             <div class="linkitem"><a href="#" target="_blank">Built in BS3+</a></div>
@@ -56,7 +63,10 @@
           </div>
         </div>
         <div class="username" id="username">
-          <span class="hasmessage" data-role="switch">Paul Smith<i class="fa fa-caret-down"></i></span>
+          <span class="hasmessage" data-role="switch">
+            <span class="big">Paul Smith<i class="fa fa-caret-down"></i></span>
+            <span class="small"><i class="fa fa-user"></i><i class="fa fa-caret-down" style="font-size:20px;margin-left:20px;"></i></span>
+          </span>
           <div class="alertpanel">
               <div><i class="fa fa-fw fa-user"></i>Profile</div>
               <div><i class="fa fa-fw fa-sign-out"></i>Log out</div>
@@ -195,8 +205,8 @@
       </div>
       <div class="slideContainer">
         <div>
-          <div class="slideBox">
-            <div class="contitem one-third" id="documentblock">
+          <div class="slideBox gridly">
+            <div class="contitem one-third brick" id="documentblock">
               <div class="documentContainer">
                 <h5 class="title">DOCUMENT CENTER</h5>
                 <div class="listContainer">
@@ -233,7 +243,7 @@
                 </div>
               </div>
             </div>
-            <div class="contitem one-third" id="scheduleblock">
+            <div class="contitem one-third brick" id="scheduleblock">
               <div class="scheduleContainer">
                 <div class="title">
                   <img src="img/flag.png" alt=""/>
@@ -261,18 +271,20 @@
                 </div>
               </div>
             </div>
-            <div class="contitem one-third" id="stockblock">
+            <div class="contitem one-third brick" id="stockblock">
               <div class="stockContainer">
                 <div class="title">
                   <img src="img/stock.png" alt="" />
                   <span>STOCK</span>
-                  <a>×</a>
+                  <a id="stockblockclosebtn">×</a>
                 </div>
                 <div class="listContainer">
                   <img src="img/stockimg.png" alt="" />
                 </div>
               </div>
-              <div class="noContainer" id="chooseContainerBtn" data-alert="widgetcenter"></div>
+              <div class="noContainer" id="chooseContainerBtn" data-alert="widgetcenter">
+                 <i class="fa fa-plus veryCenter"></i>
+              </div>
             </div>
             <div class="clear"></div>
           </div>
@@ -288,15 +300,33 @@
         </div>
         <div class="cont">
           <div>
-            <div class="contblock"></div>
+            <div class="contblock">
+               <i class="fa fa-file-text veryCenter"></i>
+               <span class="lock">
+                <i class="fa fa-lock"></i>
+                <input type="checkbox" />
+              </span>
+            </div>
             <span>Document Center</span>
           </div>
           <div>
-            <div class="contblock"></div>
+            <div class="contblock" style="background-color:#dc1d29;">
+              <i class="fa fa-table veryCenter"></i>
+              <span class="lock">
+                <i class="fa fa-lock"></i>
+                <input type="checkbox" />
+              </span>
+            </div>
             <span style="text-align:center;">Schedule</span>
           </div>
           <div>
-            <div class="contblock"></div>
+            <div class="contblock" style="background-color:#6280f7;">
+              <i class="fa fa-bar-chart veryCenter"></i>
+              <span class="">
+                <i class="fa fa-lock"></i>
+                <input type="checkbox" data-target="stockblock" />
+              </span>
+            </div>
             <span style="text-align:center;">Stock</span>
           </div>
         </div>
@@ -318,6 +348,7 @@
     <div class="masklayer">
     </div>
     <script src="./js/public.js"></script>
+    <script src="./js/swap.js"></script>
 </body>
 </html>
 
