目前就差“改变主题风格”与一个二级页面木有做了

--- a/index.html
+++ b/index.html
@@ -303,8 +303,11 @@
             <div class="contblock">
                <i class="fa fa-file-text veryCenter"></i>
                <span class="lock">
-                <i class="fa fa-lock"></i>
-                <input type="checkbox" />
+                  <span class="lockicon"><i class="fa fa-lock"></i></span>
+                  <span class="checkbox"><!-- add a class "checked" to this <SPAN> tag to control the checkbox's statement -->
+                    <i class="fa fa-fw fa-check-square-o"></i>
+                    <i class="fa fa-fw fa-square-o"></i>
+                  </span>
               </span>
             </div>
             <span>Document Center</span>
@@ -313,8 +316,11 @@
             <div class="contblock" style="background-color:#dc1d29;">
               <i class="fa fa-table veryCenter"></i>
               <span class="lock">
-                <i class="fa fa-lock"></i>
-                <input type="checkbox" />
+                <span class="lockicon"><i class="fa fa-lock"></i></span>
+                <span class="checkbox"><!-- add a class "checked" to this <SPAN> tag to control the checkbox's statement -->
+                  <i class="fa fa-fw fa-check-square-o"></i>
+                  <i class="fa fa-fw fa-square-o"></i>
+                </span>
               </span>
             </div>
             <span style="text-align:center;">Schedule</span>
@@ -323,8 +329,11 @@
             <div class="contblock" style="background-color:#6280f7;">
               <i class="fa fa-bar-chart veryCenter"></i>
               <span class="">
-                <i class="fa fa-lock"></i>
-                <input type="checkbox" data-target="stockblock" />
+                <span class="lockicon"><i class="fa fa-lock"></i></span>
+                <span class="checkbox" data-target="stockblock"><!-- add a class "checked" to this <SPAN> tag to control the checkbox's statement -->
+                  <i class="fa fa-fw fa-check-square-o"></i>
+                  <i class="fa fa-fw fa-square-o"></i>
+                </span>
               </span>
             </div>
             <span style="text-align:center;">Stock</span>
