--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/public.css">
     <link rel="stylesheet" href="./css/media768.css">
+    <link rel="stylesheet" href="./css/themezgf.css">
     <script src="./js/jquery-1.7.2.min.js"></script>
 
   </head>
-  <body>
+  <body class="themezgf">
     <div class="topbar">
       <div class="logobox">
         <img src="./img/mcdlogo1.png" class="logo1" alt="logo">
@@ -53,10 +54,10 @@
           <div class="alertpanel">
               <div class="title">Choose Theme Color</div>
               <div class="itembox">
+                  <div class="item" data-theme="themenormal"></div>
                   <div class="item"></div>
                   <div class="item"></div>
-                  <div class="item"></div>
-                  <div class="item">
+                  <div class="item" data-theme="themezgf">
                     <img src="./img/zhong.png" />
                   </div>
               </div>
