--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="./js/jquery-1.7.2.min.js"></script>
 
   </head>
-  <body class="themezgf">
+  <body>
     <div class="topbar">
       <div class="logobox">
         <img src="./img/mcdlogo1.png" class="logo1" alt="logo">
