--- a/demo.html
+++ b/demo.html
@@ -8,86 +8,25 @@
     <link href="" rel="icon">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="js/less-1.3.3.min.js" type="text/javascript"></script>
     <script src="./js/jquery-1.7.2.min.js"></script>
   </head>
   <body>
-    <div class="aaaa">
-      <div class="documentContainer">
-        <h5 class="title">DOCUMENT CENTER</h5>
-        <div class="listContainer">
-        <ul>
-          <li>
-            <a href="#">
-              <img src="img/help_center.jpg" alt=""/>
-              <h6>Help Center</h6>
-              <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="img/knowledge.jpg" alt=""/>
-              <h6>Help Center</h6>
-              <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="img/service.jpg" alt=""/>
-              <h6>Help Center</h6>
-              <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <img src="img/kpi.jpg" alt=""/>
-              <h6>Help Center</h6>
-              <p>Lorem ispum. Proin at eros non ero adipiscing mollis. Donec semper turpis sed</p>
-            </a>
-          </li>
-        </ul>
+    <div style="width:80%;height:100%;">
+      <div class="newsBox">
+        <div class="boxBanner">
+          News_麦当劳"我创我味来"概念店登陆中国
         </div>
-      </div>
-    </div>
-    <div class="aaaa">
-      <div class="scheduleContainer">
-        <div class="title">
-          <img src="img/flag.png" alt=""/>
-          <strong>Wednesday</strong>
-          <span>2015, Jun 31</span>
-        </div>
-        <div class="listContainer">
-        <ul>
-          <li>
-            <a href="#">MCD_Portal_Prototype_updating<span>10:00</span></a>
-          </li>
-          <li>
-            <a href="#">MCD_Portal_Prototype_updating<span>10:00</span></a>
-          </li>
-          <li>
-            <a href="#">MCD_Portal_Prototype_updating<span>10:00</span></a>
-          </li>
-          <li>
-            <a href="#">MCD_Portal_Prototype_updating<span>10:00</span></a>
-          </li>
-          <li>
-            <a href="#">MCD_Portal_Prototype_updating<span>10:00</span></a>
-          </li>
-        </ul>
-        </div>
-      </div>
-    </div>
-    <div class="aaaa">
-      <div class="taskContainer">
-        <h5 class="title">TASK CENTER</h5>
-        <div>
-          <div><div class="item newMsg" id="gap" data-account="10"><span class="vertical-center">GAP</span></div></div>
-          <div><div class="item newMsg" id="am" data-account="10"><span class="vertical-center">AM</span></div></div>
-          <div><div class="item newMsg" id="pmt" data-account="10"><span class="vertical-center">PMT</span></div></div>
-          <div><div class="item newMsg" id="mgis" data-account="10"><span class="vertical-center">MGIS</span></div></div>
-          <div><div class="item newMsg" id="it" data-account="10"><span class="vertical-center">IT</span></div></div>
-          <div><div class="item newMsg" id="ems" data-account="10"><span class="vertical-center">EMS</span></div></div>
-          <div><div class="item newMsg" id="bit" data-account="10"><span class="vertical-center">BIT</span></div></div>
+        <div class="boxContent">
+          <h5 class="title">麦当劳"我创我味来"概念店登陆中国</h5>
+          <span class="time">2015-6-11 09:33</span>
+          <p class="content">麦当劳中国今天正式宣布“我创我味来”(Create Your Taste)概念店登陆中国，首站落地上海。2015年是麦当劳入华25周年，“我创我味来”是公司在引领餐饮创新与强化汉堡领导力的又一里程碑。消费者今后能在“我创我味来”概念店根据个人喜好，从24种精选食材中，创作专属的汉堡。</p>
+          <p>麦当劳(中国)有限公司首席执行官张家茵女士表示：我创我味来’是麦当劳进入中国25年，送给消费者的惊喜。作为全球领先的汉堡公司，我们过去为中国消费者推广了汉堡和西式饮食文化。这次‘我创我味来’将为中国消费者提供自创汉堡、贴心服务和数字化点餐等全新体验，以满足他们热衷于创新、追求个性化的需求。”</p>
+          <img src=""><img src="">
+          <ul class="nav">
+            <li>上一篇:<a href="#">和同学去吃麦当劳</a></li>
+            <li>下一篇:<a href="#">麦当劳新品</a></li>
+          </ul>
+          <a class="back" href="#">返回</a>
         </div>
       </div>
     </div>
