--- a/news.html
+++ b/news.html
@@ -144,7 +144,7 @@
       </ul>
     </div>
     <div class="content" id="content">
-      <div class="newsBox">
+      <div class="newsBox contitem">
         <div class="boxBanner">
           News_麦当劳"我创我味来"概念店登陆中国
         </div>
@@ -153,7 +153,7 @@
           <span class="time">2015-6-11 09:33</span>
           <p>麦当劳中国今天正式宣布“我创我味来”(Create Your Taste)概念店登陆中国，首站落地上海。2015年是麦当劳入华25周年，“我创我味来”是公司在引领餐饮创新与强化汉堡领导力的又一里程碑。消费者今后能在“我创我味来”概念店根据个人喜好，从24种精选食材中，创作专属的汉堡。</p>
           <p>麦当劳(中国)有限公司首席执行官张家茵女士表示：我创我味来’是麦当劳进入中国25年，送给消费者的惊喜。作为全球领先的汉堡公司，我们过去为中国消费者推广了汉堡和西式饮食文化。这次‘我创我味来’将为中国消费者提供自创汉堡、贴心服务和数字化点餐等全新体验，以满足他们热衷于创新、追求个性化的需求。”</p>
-          <img src=""><img src="">
+          <img src="./img/news01.jpg" /><img src="./img/news02.jpg" />
           <ul class="nav">
             <li>上一篇:<a href="#">和同学去吃麦当劳</a></li>
             <li>下一篇:<a href="#">麦当劳新品</a></li>
