--- a/index.html
+++ b/index.html
@@ -245,6 +245,16 @@
               </div>
             </div>
             <div class="contitem one-third brick" id="scheduleblock">
+              <div class="emptySchedule"> <!-- 父元素加noSchedule类时出现 -->
+                <img class="backImg" src="img/schedule_empty_2.png" alt="" />
+                <div class="veryCenter">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle-thin fa-stack-2x"></i>
+                    <i class="fa fa-exclamation fa-stack-1x"></i>
+                  </span>
+                  <span class="warning">THERE IS<br/>NO SCHEDULE</span>
+              </div>
+              </div>
               <div class="scheduleContainer">
                 <div class="title">
                   <img src="img/flag.png" alt=""/>
