--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
   </head>
   <body>
     <div class="topbar">
-      <div class="logobox">
+      <a href="./index.html" class="logobox">
         <img src="./img/mcdlogo1.png" class="logo1" alt="logo">
         <img src="./img/mcdlogo2.png" class="logo2" alt="logo">
-      </div>
+      </a>
+   
       <i class="fa fa-reorder menutoggle" id="menutoggle"></i>
       <div class="myfavorite" id="myfavorite">
 
