--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="./css/media768.css">
     <link rel="stylesheet" href="./css/themezgf.css">
     <script src="./js/jquery-1.7.2.min.js"></script>
-
   </head>
   <body>
     <div class="topbar">
@@ -20,7 +19,6 @@
         <img src="./img/mcdlogo1.png" class="logo1" alt="logo">
         <img src="./img/mcdlogo2.png" class="logo2" alt="logo">
       </a>
-   
       <i class="fa fa-reorder menutoggle" id="menutoggle"></i>
       <div class="myfavorite" id="myfavorite">
 
@@ -195,7 +193,11 @@
         <div class="taskContainer">
           <h5 class="title">TASK CENTER</h5>
           <div>
-            <div><div class="item newMsg" id="GAP" data-num="39"><span class="veryCenter">GAP</span></div></div>
+            <div>
+              <div class="item newMsg" id="GAP" data-num="39">
+                <span class="veryCenter">GAP</span>
+              </div>
+            </div>
             <div><div class="item newMsg" id="AM" data-num="12"><span class="veryCenter">AM</span></div></div>
             <div><div class="item" id="PMT"><span class="veryCenter">PMT</span></div></div>
             <div><div class="item" id="MGIS"><span class="veryCenter">MGIS</span></div></div>
