更新了滑瓶轮播

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           </span>
         </span>
         <div class="alertpanel">
+          <div>
             <div class="linkitem"><a href="#" target="_blank">Slick Mega Navigation</a></div>
             <div class="linkitem"><a href="#" target="_blank">Built in BS3+</a></div>
             <div class="linkitem"><a href="#" target="_blank">Full Customizable</a></div>
@@ -45,6 +46,7 @@
             <div class="linkitem"><a href="#" target="_blank">Full Customizable</a></div>
             <div class="linkitem"><a href="#" target="_blank">Slick Mega Navigation</a></div>
             <a class="addbtn" data-alert="addnewlink">Add New Link</a><div class="clear"></div>
+          </div>
         </div>
       </div>
       <div class="topright">
