--- a/news.html
+++ b/news.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/public.css">
     <link rel="stylesheet" href="./css/media768.css">
     <link rel="stylesheet" href="./css/news.css">
+    <link rel="stylesheet" href="./css/newsmedia.css">
     <link rel="stylesheet" href="./css/themezgf.css">
 
     <script src="./js/jquery-1.7.2.min.js"></script>
@@ -32,6 +33,7 @@
           </span>
         </span>
         <div class="alertpanel">
+          <div>
             <div class="linkitem"><a href="#" target="_blank">Slick Mega Navigation</a></div>
             <div class="linkitem"><a href="#" target="_blank">Built in BS3+</a></div>
             <div class="linkitem"><a href="#" target="_blank">Full Customizable</a></div>
@@ -48,6 +50,7 @@
             <div class="linkitem"><a href="#" target="_blank">Full Customizable</a></div>
             <div class="linkitem"><a href="#" target="_blank">Slick Mega Navigation</a></div>
             <a class="addbtn" data-alert="addnewlink">Add New Link</a><div class="clear"></div>
+          </div>
         </div>
       </div>
       <div class="topright">
@@ -164,5 +167,13 @@
     </div>
       <script src="./js/public.js"></script>
     <script src="./js/swap.js"></script>
+    <script>
+      var mh = $(window).height();
+      $("#content").css("min-height",mh);
+      $(window).bind("resize",function(){
+          var mh = $(window).height();
+          $("#content").css("min-height",mh);
+      })
+    </script>
 </body>
 </html>
